# mem0

.github/workflows/: build-openmemory-api.yml  build-openmemory-ui.yml
openmemory/api/: pyproject.toml
openmemory/api/app/routers/: config.py
openmemory/api/app/utils/: categorization.py  memory.py
