[project]
name = "openmemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.68.0",
    "fastapi-pagination>=0.12.0",
    "mcp[cli]>=1.3.0",
    "mem0ai>=0.1.92",
    "openai>=1.40.0",
    "python-dotenv>=0.19.0",
    "sqlalchemy>=1.4.0",
    "tenacity==9.1.2",
]
